--- a/frontend/src/app/components/post-card/post-card.html
+++ b/frontend/src/app/components/post-card/post-card.html
@@ -25,7 +25,7 @@
   </button>
 
   <!-- Title -->
-  <h3 class="font-semibold text-lg text-neutral-700 dark:text-white mt-2">
+  <h3 class="font-semibold text-lg text-neutral-700 dark:text-white mt-2 line-clamp-1">
     {{ post.title }}
   </h3>
 
