Create project hand-effect

--- a/frontend/src/app/components/sidebar/sidebar.html
+++ b/frontend/src/app/components/sidebar/sidebar.html
@@ -54,5 +54,17 @@
     <i class="mdi mdi-heart mr-3 text-lg"></i>
     Favorite
   </a>
+
+  <a
+    routerLink="/naruto"
+    routerLinkActive="bg-primary text-white shadow-md"
+    class="flex items-center px-4 py-2 rounded-lg
+           transition-all duration-200
+           hover:bg-primary/10 hover:text-primary
+           dark:hover:bg-primary/20"
+  >
+    <i class="mdi mdi-star-box mr-3 text-lg"></i>
+    Naruto
+  </a>
   </nav>
 </aside>
